--- a/TpFinalEquipo29/Site.Master
+++ b/TpFinalEquipo29/Site.Master
@@ -15,6 +15,13 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+    <style>
+        .navbar-nav .nav-item {
+            margin-right: 15px;
+        }
+    </style>
 
 </head>
 <body>
@@ -49,11 +56,28 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    
+
+                     <ul class="navbar-nav flex-grow-1 mr-auto">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Página Principal</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Acerca de</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Administrador">Administrador</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Registro">Registro</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Estadistica">Estadística</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pagos">Pagos</a></li>
+                     </ul>
+                    <!--
+                    <div class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                    </div>
+                    -->
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Login">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Carrito"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
                     </ul>
+
+                   
+
                 </div>
             </div>
         </nav>
