--- a/TpFinalEquipo29/Site.Master
+++ b/TpFinalEquipo29/Site.Master
@@ -59,11 +59,8 @@
                     
 
                      <ul class="navbar-nav flex-grow-1 mr-auto">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Página Principal</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Administrador">Administrador</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Registro">Registro</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Estadistica">Estadística</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pagos">Pagos</a></li>
+                       
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Gestion">Gestión</a></li>
                      </ul>
 
                     <div class="container mt-3 mb-3">
@@ -71,8 +68,8 @@
                               <div class="col">
                                      <input class="form-control" type="search" placeholder="Buscar" aria-label="Buscar">
                                           </div>
-                                          <div class="col-auto">
-                                     <button class="btn btn-outline-success" type="submit">Buscar</button>
+                                          <div class="col-auto align-self-center">
+                                     <button class="btn btn-outline-light" type="submit">Buscar</button>
                              </div>
                          </div>
                     </div>
