--- a/TpFinalEquipo29/Site.Master
+++ b/TpFinalEquipo29/Site.Master
@@ -18,22 +18,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
-    <%--<span class="badge badge-pill badge-primary" id="cartItemCount">0</span>--%>
-
-    <style>
-        .navbar-nav .nav-item {
-            margin-right: 15px;
-        }
-        .search-bar {
-        width: 700px; /* Ancho de la barra de búsqueda en 300 píxeles */
-        }   
-        .search-container {
-            width: 100%;
-        }
-        input, select, textarea {
-            max-width: none; /* Anula la propiedad max-width */
-        }
-    </style>
 
 </head>
 
@@ -41,8 +25,6 @@
     <form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>
-                <%--To learn more about bundling scripts in ScriptManager see https://go.microsoft.com/fwlink/?LinkID=301884 --%>
-                <%--Framework Scripts--%>
                 <asp:ScriptReference Name="MsAjaxBundle" />
                 <asp:ScriptReference Name="jquery" />
                 <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
@@ -54,62 +36,55 @@
                 <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
                 <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
                 <asp:ScriptReference Name="WebFormsBundle" />
-                <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" runat="server" href="~/">
-                    <img src="https://i.pinimg.com/originals/75/fa/9b/75fa9b17f632646e5ae7fae3cf837761.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-                        EcoMercado
-                </a>
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+      <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" runat="server" href="~/">
+            <img src="https://builtin.com/sites/www.builtin.com/files/styles/og/public/2022-09/greentech.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            GreenTech
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" runat="server" href="~/Gestion">Gestión</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item" id="liUsername" runat="server">
+                    <asp:Label ID="lblUsername" runat="server" CssClass="nav-link"></asp:Label>
+                </li>
+                <li class="nav-item" id="liLogin" runat="server">
+                    <a class="nav-link" runat="server" href="~/Login"><i class="fas fa-sign-in-alt"></i> Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" runat="server" href="~/Carrito">
+                        <i class="fas fa-shopping-cart"></i> Mi Carrito 
+                        <span class="badge badge-pill badge-primary" id="cartItemCount">0</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-                     <ul class="navbar-nav flex-grow-1 mr-auto">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Gestion">Gestión</a></li>
-                     </ul>
-                   
-                    <%--<div class="container search-container mt-3 mb-3">
-                       <div class="row">
-                           <div class="col-10">
-                               <input class="form-control search-bar" type="search" placeholder="Buscar" aria-label="Buscar">
-                            </div>
-                            <div class="col-2">
-                                <button class="btn btn-outline-light" type="submit">Buscar</button>
-                           </div>
-                        </div>
-                    </div>--%>
-                     
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-                        <li class="nav-item">
-                            <a class="nav-link" runat="server" href="~/Carrito">
-                                <i class="fas fa-shopping-cart"></i> Mi Carrito 
-                                <span class="badge badge-pill badge-primary" id="cartItemCount">0</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+
+
 
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
-            <footer
-                class="text-center">
+            <footer class="text-center">
                 <p>&copy; <%: DateTime.Now.Year %> - Equipo - 29</p>
             </footer>
         </div>
     </form>
-
-        
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
