--- a/TpFinalEquipo29/Site.Master
+++ b/TpFinalEquipo29/Site.Master
@@ -18,6 +18,33 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+
+    <style>
+    .navbar {
+        background-color: #82bca0;
+    }
+    .navbar-brand {
+        color: #ffffff;
+    }
+    .navbar-brand,
+    .navbar-nav .nav-link {
+    font-weight: bold;
+    }
+    .navbar-nav .nav-link {
+        color: #ffffff;
+        margin-right: 10px;
+    }
+    .navbar-nav .nav-link:hover {
+        color: #ffffff;
+    }
+    .badge {
+        background-color: #28a745;
+    }
+    .navbar-nav .nav-item.gestion-link {
+        margin-left: 10px;
+    }
+</style>
+
 </head>
 
 <body>
@@ -38,43 +65,42 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light" style="background-color: #82bca0;">
-
-            <div class="container">
-                <a class="navbar-brand" runat="server" href="~/">
-                    <img src="https://builtin.com/sites/www.builtin.com/files/styles/og/public/2022-09/greentech.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    GreenTech
-                </a>
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" runat="server" href="~/Gestion">Gestión</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item" id="liUsername" runat="server">
-                            <asp:Label ID="lblUsername" runat="server" CssClass="nav-link"></asp:Label>
-                        </li>
-                        <li class="nav-item" id="liLogin" runat="server">
-                            <a class="nav-link" runat="server" href="~/Login"><i class="fas fa-sign-in-alt"></i> Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <asp:LinkButton ID="btnLogout" runat="server" Text="Logout" OnClick="btnLogout_Click" CssClass="nav-link" Visible="false" />
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" runat="server" href="~/Carrito">
-                                <i class="fas fa-shopping-cart"></i> Mi Carrito 
-                                <span class="badge badge-pill badge-primary" id="cartItemCount">0</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light">
+    <div class="container">
+        <a class="navbar-brand" runat="server" href="~/">
+            <img src="https://builtin.com/sites/www.builtin.com/files/styles/og/public/2022-09/greentech.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            GreenTech
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" runat="server" href="~/Gestion">Gestión</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item" id="liUsername" runat="server">
+                    <asp:Label ID="lblUsername" runat="server" CssClass="nav-link"></asp:Label>
+                </li>
+                <li class="nav-item" id="liLogin" runat="server">
+                    <a class="nav-link" runat="server" href="~/Login"><i class="fas fa-sign-in-alt"></i> Login</a>
+                </li>
+                <li class="nav-item">
+                    <asp:LinkButton ID="btnLogout" runat="server" Text="Logout" OnClick="btnLogout_Click" CssClass="nav-link" Visible="false" />
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" runat="server" href="~/Carrito">
+                        <i class="fas fa-shopping-cart"></i> Mi Carrito 
+                        <span class="badge badge-pill badge-primary" id="cartItemCount">0</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
