--- a/TpFinalEquipo29/Site.Master
+++ b/TpFinalEquipo29/Site.Master
@@ -78,8 +78,11 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" runat="server" href="~/Gestion">Gestión</a>
-                </li>
+                        <a class="nav-link" runat="server" href="~/Gestion">Gestión</a>
+                    </li>
+              <li class="nav-item">
+               <a class="nav-link" runat="server" href="~/MiCuenta">Mi Cuenta</a>
+                    </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" id="liUsername" runat="server">
