--- a/TpFinalEquipo29/Site.Master
+++ b/TpFinalEquipo29/Site.Master
@@ -86,7 +86,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" id="liUsername" runat="server">
-                    <asp:Label ID="lblUsername" runat="server" CssClass="nav-link"></asp:Label>
+                    <asp:LinkButton ID="lblUsername" runat="server" CssClass="nav-link" OnClick="lblUsername_Click"></asp:LinkButton>
                 </li>
                 <li class="nav-item" id="liLogin" runat="server">
                     <a class="nav-link" runat="server" href="~/Login"><i class="fas fa-sign-in-alt"></i> Login</a>
